<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".controller.MainActivity">
    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/txt_app_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_app_msg_val"
                android:textColor="@color/login_form_details"
                android:textSize="32sp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                />
            <EditText
                android:id="@+id/txt_fullname"
                android:hint="@string/txt_fullname_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:padding="16dp"
                android:inputType="textAutoComplete"
                android:textColor="#ddd"
                android:textColorHint="@color/login_form_details"
                />



            <EditText
                android:id="@+id/txt_taille"
                android:hint="@string/txt_taille_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:padding="16dp"
                android:inputType="number"
                android:textColor="#ddd"
                android:textColorHint="@color/login_form_details"
                />



            <EditText
                android:id="@+id/txt_poids"
                android:hint="@string/txt_poids_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:padding="16dp"
                android:inputType="numberDecimal"
                android:textColor="#ddd"
                android:textColorHint="@color/login_form_details"
                />

            <Spinner
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/et_bg"
                android:id="@+id/sexes_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sexes"
                />
            <Spinner
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/et_bg"
                android:id="@+id/status_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/status"
                />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/centimeters"
                    android:text="Centimètres"
                    android:textColor="#ddd"
                    android:textColorHighlight="#0097c4"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/meters"
                    android:textColorHighlight="#0097c4"
                    android:text="Mètres"
                    android:textColor="#ddd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_refresh"
                    android:text="@string/btn_refresh_txt"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/btn_bg"
                    android:layout_marginEnd="8dp"
                    android:textAllCaps="false"
                    android:textColor="#ddd"
                    android:textAlignment="center"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/refresh"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_calculate"
                    android:background="@drawable/btn_bg"
                    android:textAllCaps="false"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    android:textColor="#ddd"
                    android:text="@string/btn_calculate_txt"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/calculator"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>